--- a/css/style.css
+++ b/css/style.css
@@ -260,13 +260,15 @@ padding-right: 30px;
   margin-bottom: 60px;
 }
 
-.services__title-box {
+.services__title-box,
+.form__title-box {
   max-width: 520px;
   padding-left: 140px;
   position: relative;
 }
 
-.services__title-box::before {
+.services__title-box::before,
+.form__title-box::before {
   content: "";
   position: absolute;
   width: 100px;
@@ -276,7 +278,8 @@ padding-right: 30px;
   top: 11px;
 }
 
-.services__title {
+.services__title,
+.form__title  {
   font-size: 24px;
   font-weight: 500;
   line-height: 24px;
@@ -285,7 +288,8 @@ padding-right: 30px;
   margin-bottom: 10px;
 }
 
-.services__text{
+.services__text,
+.form__text {
   letter-spacing: 0.1px;
 }
 
@@ -348,6 +352,179 @@ padding-right: 30px;
   border-bottom:  1px solid #050505;
   margin-right: 60px;
 }
+
+.about {
+  background-image: url(../images/about_bg.jpg);
+  background-size: cover; 
+  background-position: center center; 
+  min-height: 300px;
+  background-repeat: no-repeat;
+  padding: 25px 0 45px;
+}
+
+.about__inner {
+  max-width: 545px;
+}
+
+.about__title {
+  padding: 10px 0 25px;
+  font-size: 24px;
+  line-height: 24px;
+  color: #ffffff;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+}
+
+.about__text {
+  margin-bottom: 30px;
+  letter-spacing: 0.1px;
+  line-height: 24px;
+  color: #d3d2d2;
+}
+
+.about_btn .default-btn::after{
+color: #000000;
+}
+
+.form {
+  padding-top: 30px;
+}
+
+.form__inner {
+  padding-bottom: 40px;
+  background-image: url(../images/form-bg.png);
+  min-height: 460px;
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+
+.form__box {
+  max-width: 850px;
+  padding-top: 45px;
+}
+
+.form__box-inner{
+  display: flex;
+  justify-content: space-between;
+}
+
+.form__box-left {
+  max-width: 260px;
+  width: 100%;
+}
+
+.form__box-right {
+  max-width: 555px;
+  width: 100%;
+}
+
+.form__box-inner label,
+.form__box-inner input,
+.form__box-inner textarea,
+.form__box-inner select {
+  display: block;
+  width: 100%;
+}
+
+.form__box-inner label{
+  line-height: 36px;
+  color: #282828;
+  font-family: 'Roboto', sans-serif;
+}
+
+.form__box-inner input {
+  margin-bottom: 8px;
+  outline: none;
+  height: 40px;
+  border: 1px solid #e6e6e6e6;
+  padding: 0 10px;
+}
+
+.form__box-inner select{
+  outline: none;
+  height: 40px;
+  border: 1px solid #e6e6e6e6;
+  padding-left: 17px;
+}
+
+.form__box-inner textarea{
+  outline: none;
+  border: 1px solid #e6e6e6e6;
+  padding: 10px;
+  height: 208px;
+  resize: none;
+  margin-bottom: 40px;
+
+}
+
+.form__box-inner button {
+  background-color: transparent;
+  color: #282828;
+  float: right;
+}
+
+.advantages {
+  padding: 55px 0 40px;
+  background-image: url(../images/advantages-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  min-height: 285px;
+  background-size: cover;
+}
+
+.advantages__inner {
+  color: #ffffff;
+  text-align: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.advantages__item {
+  max-width: 360px;
+  padding: 0 20px;
+}
+
+.advantages__title {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  padding: 60px 0 15px;
+  position: relative;
+}
+
+.advantages__title::before {
+  content: "";
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  border: 2px solid #ffc222;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+
+.advantages__title::after{
+  content: "\f00c";
+  font-family: "icomoon";
+  font-size: 14px;
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.advantages__text {
+  line-height: 24px;
+  color: #d3d2d2;
+  letter-spacing: 0.1px;
+}
+
+
 
 
 
