--- a/css/style.css
+++ b/css/style.css
@@ -254,21 +254,26 @@ padding-right: 30px;
   padding: 50px 0 30px;
 }
 
-.services__top{
+.services__top,
+.news__top
+{
   display: flex;
   justify-content: space-between;
   margin-bottom: 60px;
 }
 
 .services__title-box,
-.form__title-box {
+.form__title-box,
+.news__title-box {
   max-width: 520px;
   padding-left: 140px;
   position: relative;
 }
 
 .services__title-box::before,
-.form__title-box::before {
+.form__title-box::before,
+.news__title-box::before
+ {
   content: "";
   position: absolute;
   width: 100px;
@@ -279,7 +284,9 @@ padding-right: 30px;
 }
 
 .services__title,
-.form__title  {
+.form__title,
+.news__title
+  {
   font-size: 24px;
   font-weight: 500;
   line-height: 24px;
@@ -289,11 +296,13 @@ padding-right: 30px;
 }
 
 .services__text,
-.form__text {
+.form__text,
+.news__text {
   letter-spacing: 0.1px;
 }
 
-.services__btn a {
+.services__btn a,
+.news__btn a {
   color: #373636;
   line-height: 24px;
   letter-spacing: 0.25px;
@@ -524,7 +533,230 @@ color: #000000;
   letter-spacing: 0.1px;
 }
 
+.news{
+  padding: 55px 0 110px;
+  background-color: #f9f9f9;
+}
 
+.news__inner{
+  display: flex;
+  justify-content: space-between;
+}
+
+.news__slider {
+  max-width: 555px;
+  width: 100%;
+  background-color: #ffffff;
+  box-shadow: 0px 5px 15.36px 0.64px rgba(128, 127, 127, 0.13);
+  padding: 60px 35px 45px 70px;
+  position: relative;
+}
+
+.news__slider::before {
+  content: "\f10e";
+  font-family: "icomoon";
+  color: #ffffff;
+  font-size: 16px;
+  width: 65px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  background-color: #ffc222;
+  position: absolute;
+  top: 0;
+  left: 70px;
+}
+
+.news__blog {
+  max-width: 260px;
+  width: 100%;
+}
+
+.news__images {
+  position: relative;
+}
+
+.news__date {
+  position: absolute;
+  background-color: #ffc222;
+  height: 55px;
+  width: 50px;
+  color: #ffffff;
+  text-align: center;
+  padding-top: 30px;
+  font-weight: 700;
+  top: 0px;
+  left: 10px;
+}
+
+.news__blog-title {
+  font-size: 16px;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.5px;
+  color: #242424;
+  padding: 12px 0;
+}
+
+.news__blog-text {
+  letter-spacing: 0.1px;
+  color: #5e5e5e;
+}
+
+.news__slider-title {
+  font-size: 18px;
+  line-height: 24px;
+  color: #242424;
+  font-weight: 500;
+  font-family: 'Roboto', sans-serif;
+  letter-spacing: 0.5px;
+  margin-bottom: 15px;
+}
+
+.news__slider-text {
+  margin-bottom: 30px;
+}
+
+.news__slider-author {
+  letter-spacing: 0.1px;
+  color: #212020;
+  font-family: 'Roboto', sans-serif;
+}
+
+.news__slider-inner .slick-btn  {
+  top: auto;
+  bottom: -110px;
+}
+
+.news__slider-inner .slick-next  {
+ right: -35px;
+}
+
+.news__slider-inner .slick-prev {
+  right: 20px;
+  left: auto;
+}
+
+.news__slider-inner .slick-disabled {
+  color: #dadada;
+  border-color: #dadada;
+}
+
+.news__slider-inner .slick-disabled::before {
+  color: #dadada;
+}
+
+.footer__content {
+  background-color: #595959;
+  padding: 20px 0 30px;
+}
+
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer__inner .header__btn {
+  float:  none;
+  display: inline-block;
+}
+
+.footer__map {
+  padding-top: 10px;
+  max-width: 630px;
+}
+
+/* .footer__map iframe {
+  width: 100%;
+  height: 250px;
+} */
+
+.footer__info{
+  max-width: 360px;
+}
+
+.footer__title {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #ffffff;
+  line-height: 36px;
+  letter-spacing: 0.5px;
+}
+
+.footer__text {
+  color: #d3d2d2;
+  margin-bottom: 20px;
+}
+
+.footer__list {
+  padding-top: 10px;
+}
+
+.footer__list li {
+  margin-top: 10px;
+}
+
+.footer__list a {
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.25px;
+  color: #ffffff;
+  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+  padding-left: 33px;
+  position: relative;
+}
+
+.footer__list a:before {
+  content:"\f003" ;
+  position: absolute;
+  font-family: "icomoon";
+  left: 0;
+  color: #ffc222;
+}
+
+.footer__list .footer__phone::before {
+  content:"\f095";
+  left:3px
+}
+
+.footer__list .footer__adress::before {
+  content:"\f041" ;
+  left:3px
+}
+
+.footer__copy {
+  background-color: #303030;
+  text-align: center;
+  font-size: 12px;
+  line-height: 24px;
+  padding: 8px 0;
+  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+}
+
+#modal {
+  width: 300px;
+}
+
+
+#modal  input{
+  display: block;
+  width: 100%;
+  margin-bottom: 20px;
+  height: 40px;
+  outline: none;
+  border: 1px solid #e6e6e6;
+  padding: 0 10px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+}
+
+#modal  input[type="submit"]{
+  background-color: #ffc222;
+  border: none;
+}
 
 
 
